RESOLVED FIXED29770
Web Inspector: DOM store is being unbound twice, leading to assertion failure
https://bugs.webkit.org/show_bug.cgi?id=29770
Summary Web Inspector: DOM store is being unbound twice, leading to assertion failure
Pavel Feldman
Reported 2009-09-26 11:35:29 PDT
1. Open Web Inspector 2. Type something in console (completions are being calculated for window, touching localStore, lazily creating it) 3. Close Web Inspector (unbind is called once) 4. Refresh the page (unbind is called again) -> ASSERTION fails We keep stores bound only while inspector window is show, so this assersion is not correct.
Attachments
patch (2.29 KB, patch)
2009-09-26 11:39 PDT, Pavel Feldman
timothy: review+
Pavel Feldman
Comment 1 2009-09-26 11:39:22 PDT
Pavel Feldman
Comment 2 2009-09-27 02:19:30 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/inspector/InspectorController.cpp M WebCore/inspector/InspectorDOMStorageResource.cpp Committed r48799
Note You need to log in before you can comment on or make changes to this bug.