2009-09-27  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: DOM store is being unbound twice, leading to assertion failure.

        https://bugs.webkit.org/show_bug.cgi?id=29770

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::didOpenDatabase):
        (WebCore::InspectorController::didUseDOMStorage):
        * inspector/InspectorDOMStorageResource.cpp:
        (WebCore::InspectorDOMStorageResource::unbind):


Canonical link: https://commits.webkit.org/40362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48799 268f45cc-cd09-0410-ab3c-d52691b4dbfc